[DEV] Force reflow on document ready to avoid possible overlap of the table header

--- a/assets/stylesheets/kanban.css
+++ b/assets/stylesheets/kanban.css
@@ -132,3 +132,11 @@
   color:rgb(184, 224, 244);
 }
 
+#kanban_table {
+  width: 100%; 
+  table-layout: auto; 
+}
+
+.floatThead-container {
+  width: 100% !important; 
+}
